# c_fsm

./: .gitignore  CMakeLists.txt  PVS-Studio.cmake  build_msc_x64.bat  ctl.input.t  simulate.input.t
algorithms/: CMakeLists.txt  tree.cpp
chess/: CMakeLists.txt
chess/gui/: chess_gui.cpp
clever_ant/: CMakeLists.txt  ant.c  ant.h  clever_ant.c  clever_ant_gen.c  clever_ant_gen.cpp  clever_ant_gen.h  clever_ant_gen.txt  clever_ant_gen_main.c  sequence.c  sequence.h  sequence_tests.c
clever_ant/gui/: clever_ant_gen_gui.c
common/: CMakeLists.txt  base64.c  c_logger.c  c_logger.h  common.c  common.h  common_string_main.c  configuration.c  configuration.h  tests.cpp  u_memory.c  u_memory.h
forth/: CMakeLists.txt  forth.c  forth.h  forth_main.c
fsm/: CMakeLists.txt  factory.json  fsm.tex  fsm_bulk.c  fsm_bulk.h  fsm_bulk_main.c  fsm_coin.c  fsm_coin.h  fsm_coin_main.c  fsm_delay.c  fsm_delay.h  fsm_delay_main.c  fsm_insert.c  fsm_insert.h  fsm_insert_main.c  fsm_welding.c  fsm_welding.h  fsm_welding_main.c  simulate.bulk.t  tex_build.bat  tex_clean.bat  transport_loader.c  transport_loader.h  transport_loader_main.c
fsm/.8/: welding.prt  welding_running.prt
fsm/gui/: transport_loader_gui.c  transport_loader_gui.cpp  transport_samples.cpp
game_life/: CMakeLists.txt  game_life.c  game_life.h  game_life_main.c
game_life/gui/: game_life_gui.c  sample-cat.txt  sample-glider.txt  sample-unknown-001.txt  sample-virus.txt
include/: raygui.h
math_lang/: CMakeLists.txt  math_lang.c  math_lang.h  math_lang_main.c  math_main.c
microc/: CMakeLists.txt  micro.c
pneumo_ctrl/: CMakeLists.txt  pneumo_ctrl.c  pneumo_ctrl.h  pneumo_ctrl_main.c  simulate.pneumo.t
regexp/: CMakeLists.txt  graph.isbn.plantuml  graph.numbs.1.plantuml  regexp_isbn.c  regexp_nums.c  regexp_nums_2.c  regexp_tags.c  simulate.nums.t
regexp/.10/: graph.numbs.2.plantuml
src_c/: classic_menu.c  clever_ant.c  clever_ant_gen.c  ctl_main.c  fm.c  fm.h  fm_main.c  fsm.c  fsm.h  game_life.c  main.c  math_lang.c
turing/: CMakeLists.txt  turing.c  turing.h  turing_direct_remove.c  turing_direct_sharp.c  turing_main.c  turing_test.cpp
turing/.10/: remove.tur
